ME_BUILDOUT_XMEME_JAVA_MODULE_BASIC  (Crio.Do)